# alversjo-maps

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  editors.json  main.py  package.json  vercel.json
.claude/: settings.json
.vercel/: project.json
api/: index.py
app/: index.html  style.css
data/03_ready/: map1.json  map2.geojson  map3.geojson
python/: download_tiles.py  main.py  migrate_azimuth_range.py  pyproject.toml
python/tests/: conftest.py  test_geojson.py
src/: maptiler.py
webapp/: .gitignore  next.config.mjs  package-lock.json  package.json  vercel.json
webapp/api/: README.md  index.py
webapp/app/: globals.css  layout.js  page.js
webapp/app/[mapId]/: page.js
webapp/app/[mapId]/schedule/: page.js
webapp/app/api/github/commit/: route.js
webapp/app/api/github/commits/: route.js
webapp/app/api/github/file/: route.js
webapp/components/: AuthButton.js  EditPanel.js  ImportDialog.js  InteractiveSchedule.js  MapInfoCard.js  MapViewer.js
webapp/lib/: auth.js  github.js  schedule-data.js  sound-class.js
webapp/public/data/: map1.json  map2.json  map3.geojson  map3.json  map4.json  map5.json  map6.json  maps-config.json
webapp/scripts/: convert-elevation.mjs  download_tiles.mjs
